Creacion del Resto De Cards v1.0

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
     <br />
     <nav>
       <a href="./HTML/CARD-1.html">CARD 1</a>
-      <a href="">CARD 2</a>
-      <a href="">CARD 3</a>
-      <a href="">CARD 4</a>
+      <a href="./HTML/CARD-2.html">CARD 2</a>
+      <a href="./HTML/CARD-3.html">CARD 3</a>
+      <a href="./HTML/CARD-4.html">CARD 4</a>
     </nav>
   </body>
 </html>
