--- a/HTML/CARD-4.html
+++ b/HTML/CARD-4.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CARD 1</title>
     <link rel="stylesheet" href="../CSS/normalize.css" />
-    <link rel="stylesheet" href="../CSS/Card-1.css" />
+    <link rel="stylesheet" href="../CSS/Card-4.css" />
   </head>
 
   <body>
-    <h1>CARD 1: Default</h1>
+    <h1>CARD 4: PC Gamer</h1>
     <a href="../index.html" class="home">HOME</a>
     <main>
       <article class="principal">
-        <h2>Compañia Portales</h2>
-        <h3>Elige una Categoria</h3>
+        <h2>Compañía Portales</h2>
+        <h3>Elige una Categoría</h3>
         <div class="content">
           <section class="primero">
             <svg
@@ -211,6 +211,7 @@
             <h2>Mouse</h2>
           </section>
         </div>
+
         <div class="social">
           <a href="#">
             <img
